[project]
name = "hastie"
version = "0.9.0"
authors = [
  { name="Marcus Kazmierczak", email="marcus@mkaz.com" },
]
description = "A static site generator"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/mkaz/hastie"
"Bug Tracker" = "https://github.com/mkaz/hastie/issues"

# pyproject.toml
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
pythonpath = "hastie"
testpaths = [
    "tests",
]


[tool.poetry]
name = "hastie"
version = "0.9.0"
description = "A static site generator"
authors = ["Marcus Kazmierczak <marcus@mkaz.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.2"
black = "^23.1.0"
flake8 = "^6.0.0"
jinja2 = "^3.1.2"
markdown = "^3.4.1"
pygments = "^2.14.0"
pytest = "^7.2.1"
python-frontmatter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
